Correct the .menu-wrapper gap and transform: none; for 1280px and

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -182,15 +182,7 @@
 
 /* !=====768===== */
 @media screen and (min-width: 768px) {
-  /* .container {
-    max-width: 768px;
-  } */
-
-  .container {
-    padding: 0 32px;
-  }
-
-  .menu {
+    .menu {
     width: 380px;
     background-image: url(../img/menu/tablet/emblem1-tab.png);
     background-size: 380px;
@@ -243,27 +235,13 @@
 
 /* !=====1280 */
 @media screen and (min-width:1280px) {
-  /* .container {
-    max-width: 1280px;
-  } */
-
-  .header-section {
-    padding-top: 20px;
-  }
-
-  .container {
-    .container {
-      padding: 0 100px;
-    }
-  }
-
   .header-btn {
     display: none;
   }
 
   .menu {
     position: static;
-    transform: translate(0%);
+    transform: none;
     background-color: #1c2225;
     background-image: none;
     background-size: 0;
@@ -290,6 +268,7 @@
     align-items: center;
     justify-content: space-between;
     margin-right: 20px;
+    gap: 0;
   }
 
   .menu-phone-wrapper {
@@ -336,9 +315,6 @@
 
 /* !=====1440 */
 @media screen and (min-width:1440px) {
-  /* .container {
-    max-width: 1440px;
-  } */
 
   .header-section {
     padding-top: 18px;
